# aurionrs

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: components.rs  ecs.rs  graphics.rs  main.rs
